# ants-wasm

./: Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js
src/: ant.rs  ants.rs  consts.rs  food.rs  functions.rs  grid.rs  helpers.rs  lib.rs  nest.rs  pheromones.rs
