[package]
name = "ants"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3

# [profile.dev]
# lto = true
# opt-level = 3

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.82"
easybench-wasm = "0.2.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console'
]

